--- a/index.html
+++ b/index.html
@@ -28,7 +28,15 @@
           Search
         </button>
       </section>
+      <section id="loading" class="h-96 hidden">
+        <div class="flex justify-center items-center h-full">
+          <span class="loading loading-bars loading-lg"></span>
+        </div>
+      </section>
       <section id="phone-container" class="grid grid-cols-3 gap-5"></section>
+      <section id="show-all" class="text-center mt-8 hidden mb-5">
+        <button class="btn btn-accent">Search</button>
+      </section>
     </main>
     <script src="./js/main.js"></script>
   </body>
