show details in the modal

--- a/index.html
+++ b/index.html
@@ -40,10 +40,9 @@
         </button>
       </section>
       <!-- modal  -->
-      <dialog
-        id="show_details"
-        class="modal modal-bottom sm:modal-middle"
-      ></dialog>
+      <dialog id="show_details" class="modal modal-bottom sm:modal-middle">
+        <div id="details-container"></div>
+      </dialog>
     </main>
     <script src="./js/main.js"></script>
   </body>
