--- a/index.html
+++ b/index.html
@@ -43,6 +43,21 @@
       <dialog id="show_details" class="modal modal-bottom sm:modal-middle">
         <div id="details-container"></div>
       </dialog>
+
+      <!-- no data available modal  -->
+      <!-- Open the modal using ID.showModal() method -->
+      <dialog id="my_modal_1" class="modal">
+        <div class="modal-box">
+          <h3 class="text-lg font-bold">Hello!</h3>
+          <p class="py-4 text-red-500 text-3xl">No Data Available</p>
+          <div class="modal-action">
+            <form method="dialog">
+              <!-- if there is a button in form, it will close the modal -->
+              <button class="btn">Close</button>
+            </form>
+          </div>
+        </div>
+      </dialog>
     </main>
     <script src="./js/main.js"></script>
   </body>
