show default data

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <header class="container mx-auto">
-      <h1 class="text-3xl">Get your Favorite Apple Device</h1>
+      <h1 class="text-3xl">Search with your favorite phone brand name</h1>
     </header>
     <main class="container mx-auto mt-7">
       <section class="mb-5">
